# NodeLens

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  package-lock.json  package.json  server.js
backend/config/: db.js  neo4j.js  redis.js
backend/controllers/: authController.js  graphController.js  userController.js
backend/middleware/: jwtAuth.js
backend/models/: Activity.js  User.js
backend/routes/: analyticsRoutes.js  authRoutes.js  userRoutes.js
backend/scripts/: sampleSeedData.js  seedNeo4j.js
backend/utils/: cppRunner.js  graphBuilder.js
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: axios.js
frontend/src/components/: GraphCanvas.jsx  Layout.jsx  MetricCard.jsx  PageHeader.jsx  Sidebar.jsx
frontend/src/hooks/: useAuth.jsx  useGraphFetch.jsx
frontend/src/pages/: Communities.jsx  Dashboard.jsx  Influence.jsx  Login.jsx  Register.jsx  RiskPage.jsx  Simulations.jsx  TrustRoute.jsx
frontend/src/styles/: globals.css
graph-engine/: .gitignore  CMakeLists.txt  Makefile  README.md
graph-engine/include/: Algorithms.h  Graph.h
graph-engine/src/: Community.cpp  Dijkstra.cpp  Forecaster.cpp  PageRank.cpp  Prim.cpp  Simulation.cpp  Stability.cpp  main.cpp
